--- a/atcq-service/pom.xml
+++ b/atcq-service/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>atcq-service</artifactId>
-    <packaging>${packaging.type}</packaging>
+    <packaging>jar</packaging>
 
     <name>atcq-service</name>
     <description>ATCQ Services</description>
@@ -16,7 +16,7 @@
     </parent>
 
     <properties>
-        <start-class></start-class>
+        <start-class>com.khalichi.atcq.service.ServiceApplication</start-class>
     </properties>
 
     <dependencies>
