--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.khalichi</groupId>
-    <artifactId>atcq-parent</artifactId>
-    <version>${atcq.version}</version>
+    <artifactId>aqm-parent</artifactId>
+    <version>${aqm.version}</version>
     <packaging>pom</packaging>
 
-    <name>atcq-parent</name>
-    <description>Air Traffic Control Priority Queue</description>
+    <name>aqm-parent</name>
+    <description>Air Traffic Control Queue Management</description>
     <url>https://github.com/kkhalichi/atcq</url>
 
     <parent>
@@ -20,7 +20,7 @@
     </parent>
 
     <modules>
-        <module>atcq-service</module>
+        <module>aqm-service</module>
     </modules>
 
     <profiles>
@@ -46,7 +46,7 @@
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <atcq.version>1.0-SNAPSHOT</atcq.version>
+        <aqm.version>1.0-SNAPSHOT</aqm.version>
         <cxf.version>3.2.0-SNAPSHOT</cxf.version>
     </properties>
 
