--- a/aqm-service/src/main/resources/application.yml
+++ b/aqm-service/src/main/resources/application.yml
@@ -12,6 +12,10 @@ cxf:
             service-list-path: /info
     jaxrs:
         component-scan: true
+        client:
+            address: http://localhost:${server.port}
+            classes-scan-packages: com.khalichi
+
 
 logging:
     level:
