--- a/pom.xml
+++ b/pom.xml
@@ -48,18 +48,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <aqm.version>1.0-SNAPSHOT</aqm.version>
         <cxf.version>3.2.0-SNAPSHOT</cxf.version>
+        <junit.version>4.12</junit.version>
     </properties>
-
-    <repositories>
-        <repository>
-            <id>spring-snapshots</id>
-            <name>Spring Snapshots</name>
-            <url>https://repo.spring.io/libs-snapshot</url>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
 
     <build>
         <plugins>
