--- a/aqm-service/pom.xml
+++ b/aqm-service/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>com.khalichi</groupId>
         <artifactId>aqm-parent</artifactId>
-        <version>${aqm.version}</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <properties>
